--- a/LibraryApp/android/app/src/main/res/drawable/splash_background.xml
+++ b/LibraryApp/android/app/src/main/res/drawable/splash_background.xml
@@ -4,11 +4,11 @@
   xmlns:android="http://schemas.android.com/apk/res/android"    
   android:opacity="opaque">    
 <!-- The background color, preferably the same as your normal theme -->    
-  <item android:drawable="@android:color/white"/>    
+  <item android:drawable="@color/splash_background"/>    
 <!-- Your splash image -->    
   <item>        
     <bitmap            
-      android:src="@drawable/book"
-      android:gravity="center"/>    
+      android:src="@drawable/splash_logo"
+      android:gravity="center"/>
   </item>
 </layer-list>
