--- a/LibraryApp/android/app/src/main/res/values/styles.xml
+++ b/LibraryApp/android/app/src/main/res/values/styles.xml
@@ -5,9 +5,8 @@
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
     </style>
-    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="SplashTheme" parent="AppTheme">
         <!-- Customize your theme here. -->
-        <item name="android:textColor">#000000</item>
         <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 
